Add admission form submission payment flow

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,5 +15,7 @@ SSLCOMMERZ_FAIL_URL=http://localhost:3000/payment/fail
 SSLCOMMERZ_CANCEL_URL=http://localhost:3000/payment/cancel
 SSLCOMMERZ_IPN_URL=http://localhost:8000/api/payments/sslcommerz/ipn/
 SSLCOMMERZ_TRANSCRIPT_IPN_URL=http://localhost:8000/api/transcripts/sslcommerz/ipn/
+SSLCOMMERZ_ADMISSION_IPN_URL=http://localhost:8000/api/admissions/sslcommerz/ipn/
+ADMISSION_FORM_FEE_AMOUNT=3500
 SSLCOMMERZ_CURRENCY=BDT
 TRANSCRIPT_FEE_AMOUNT=3500
