--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,3 +3,4 @@
 REACT_APP_API_URL=/api
 REACT_APP_SSLCOMMERZ_SANDBOX=true
 REACT_APP_TRANSCRIPT_FEE_AMOUNT=3500
+REACT_APP_ADMISSION_FORM_FEE_AMOUNT=3500
