--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
 REACT_APP_API_URL=http://localhost:8000/api
 REACT_APP_SSLCOMMERZ_SANDBOX=true
 REACT_APP_TRANSCRIPT_FEE_AMOUNT=3500
+REACT_APP_ADMISSION_FORM_FEE_AMOUNT=3500
