--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 SECRET_KEY=replace-me
 DEBUG=true
 ALLOWED_HOSTS=localhost,127.0.0.1
+FRONTEND_BASE_URL=http://localhost:3000
 
 # SSLCOMMERZ
 SSLCOMMERZ_SANDBOX=true
@@ -16,6 +17,11 @@ SSLCOMMERZ_CANCEL_URL=http://localhost:3000/payment/cancel
 SSLCOMMERZ_IPN_URL=http://localhost:8000/api/payments/sslcommerz/ipn/
 SSLCOMMERZ_TRANSCRIPT_IPN_URL=http://localhost:8000/api/transcripts/sslcommerz/ipn/
 SSLCOMMERZ_ADMISSION_IPN_URL=http://localhost:8000/api/admissions/sslcommerz/ipn/
-ADMISSION_FORM_FEE_AMOUNT=3500
 SSLCOMMERZ_CURRENCY=BDT
 TRANSCRIPT_FEE_AMOUNT=3500
+ADMISSION_FORM_FEE_AMOUNT=3500
+
+# Web Push (VAPID)
+WEBPUSH_PUBLIC_KEY=
+WEBPUSH_PRIVATE_KEY=
+WEBPUSH_SUBJECT=mailto:admin@example.com
