--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,7 @@ ALLOWED_HOSTS=localhost,127.0.0.1,rmmdc.edu.bd,82.112.238.218,
 
 # CORS Settings
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://rmmdc.edu.bd,https://rmmdc.edu.bd,https://localhost:3000,https://127.0.0.1:3000
+FRONTEND_BASE_URL=http://localhost:3000
 
 # Email Settings (for password reset)
 EMAIL_HOST=smtp.gmail.com
@@ -28,8 +29,15 @@ SSLCOMMERZ_FAIL_URL=http://localhost:3000/payment/fail
 SSLCOMMERZ_CANCEL_URL=http://localhost:3000/payment/cancel
 SSLCOMMERZ_IPN_URL=http://localhost:8000/api/payments/sslcommerz/ipn/
 SSLCOMMERZ_TRANSCRIPT_IPN_URL=http://localhost:8000/api/transcripts/sslcommerz/ipn/
+SSLCOMMERZ_ADMISSION_IPN_URL=http://localhost:8000/api/admissions/sslcommerz/ipn/
 SSLCOMMERZ_CURRENCY=BDT
 TRANSCRIPT_FEE_AMOUNT=3500
+ADMISSION_FORM_FEE_AMOUNT=3500
+
+# Web Push (VAPID)
+WEBPUSH_PUBLIC_KEY=BGs1dxu0URFLSPk4KWR74_3cWctcTU1C35QF87BpGk-F9FnpgI6HE0S0kUT3Sl0RJv71F852V6JkN4XcE_kZQkE
+WEBPUSH_PRIVATE_KEY=L2tRcbox4dQoRvAVnCbrB_t6ge82PGnTO8kdhzoEW28
+WEBPUSH_SUBJECT=mailto:admin@rmmdc.edu.bd
 
 # Production Settings (for deployment)
 # SECRET_KEY=generate-a-secure-key-for-production
