--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,5 +2,6 @@
 
 REACT_APP_API_URL=/api
 REACT_APP_SSLCOMMERZ_SANDBOX=true
+# Payment amounts
 REACT_APP_TRANSCRIPT_FEE_AMOUNT=3500
 REACT_APP_ADMISSION_FORM_FEE_AMOUNT=3500
