--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -17,6 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+# Keep base .env files tracked in this repo
+!.env
+!.env.production
 
 npm-debug.log*
 yarn-debug.log*
