--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,141 +1,14 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.3
-aiosignal==1.4.0
-anyio==4.11.0
-appdirs==1.4.4
-argcomplete==3.6.3
 asgiref==3.11.0
-attrs==25.4.0
-Beaker==1.12.1
-beautifulsoup4==4.14.3
-blivet==3.12.1
-Brlapi==0.8.7
-certifi==2025.7.9
-cffi==2.0.0
-chardet==5.2.0
-charset-normalizer==3.4.3
-click==8.1.7
-cockpit @ file:///builddir/build/BUILD/cockpit-353.1-build/cockpit-353.1/tmp/wheel/cockpit-353.1-py3-none-any.whl#sha256=7bcbb10e8083042579647d9004814730b341e2ca7228ea7e8ebd6fceb7f5d870
-crypt_r==3.13.1
-cryptography==46.0.3
-cssselect==1.3.0
-cupshelpers==1.0
-Cython==3.1.3
-dasbus==1.7
-dbus-python==1.4.0
-dbus_next==0.2.3
-distro==1.9.0
 dj-database-url==2.2.0
 Django==5.2.7
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-dnf==4.24.0
-fedora-third-party==0.10
-file-magic==0.4.0
-frozenlist==1.8.0
 gunicorn==20.1.0
-h11==0.16.0
-http_ece==1.2.1
-httpcore==1.0.9
-httpx==0.28.1
-humanize==4.13.0
-idna==3.10
-inkex==1.4.0
-iso639==0.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-langtable==0.0.69
-libcomps==0.1.23
-libdnf==0.75.0
-libdnf5==5.2.17.0
-louis==3.33.0
-lxml==6.0.1
-Mako==1.2.3
-Markdown==3.10
-MarkupSafe==3.0.2
-mercurial==7.1.1
-meson==1.8.5
-multidict==6.7.0
-nftables==0.1
-numexpr==2.12.1
-numpy==2.3.5
-olefile==0.47
-packaging==25.0
-Paste==3.10.1
-perf==0.1
-pexpect==4.9.0
-pid==3.0.4
-pillow==11.0.0
-pipx==1.8.0
-platformdirs==4.2.2
-ply==3.11
-productmd==1.49
-progressbar2==4.5.0
-propcache==0.4.1
-psutil==7.0.0
+Pillow==11.0.0
 psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pwquality==1.4.5
-py-vapid==1.9.4
-pyalsa==1.2.14
-PyAudio==0.2.13
-pycairo==1.28.0
-pycparser==2.22
-pycrypto==2.6.1
-pycups==2.0.4
-pyenchant==3.2.2
-PyGObject==3.54.5
-pyinotify==0.9.6
-PyJWT==2.10.1
-pykickstart @ file:///builddir/build/BUILD/pykickstart-3.66-build/pykickstart-3.66
-pyOpenSSL==25.1.0
-pyparsing==3.1.2
-pyparted==3.13.0
-pyproj==3.7.2
-pyserial==3.5
-PySocks==1.7.1
-python-augeas==1.2.0
-python-dateutil==2.9.0.post0
 python-decouple==3.8
-python-linux-procfs==0.7.3
-python-meh==0.52
-python-pam==2.0.2
-python-utils==3.9.1
-pyudev==0.24.3
 pywebpush==2.2.0
-pyxdg==0.27
-PyYAML==6.0.2
-pyynl @ file:///builddir/build/BUILD/kernel-6.17.12-build/kernel-6.17.12/linux-6.17.12-300.fc43.x86_64/tools/net/ynl
-RapidFuzz==3.12.2
-referencing==0.36.2
-regex==2025.10.23
-reportlab==4.2.5
 requests==2.32.5
-requests-file==2.0.0
-requests-ftp==0.3.1
-rpds-py==0.27.0
-rpm==6.0.1
-rpmautospec==0.8.3
-rpmautospec-core==0.1.5
-scour==0.38.2
-selinux @ file:///builddir/build/BUILD/libselinux-3.9-build/libselinux-3.9/src
-sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.9-build/selinux-3.9/python/sepolicy
-setools==4.6.0
-setuptools==80.9.0
-simpleline==1.9.0
-six==1.17.0
-sniffio==1.3.1
-sos==4.10.2
-soupsieve==2.8
 sqlparse==0.5.5
-systemd-python==235
-tinycss2==1.4.0
-typing_extensions==4.15.0
-urllib3==2.6.2
-userpath==1.9.2
-webencodings==0.5.1
 whitenoise==6.8.2
-xkbregistry==0.3
-yarl==1.22.0
-zstandard==0.25.0
