Backend .env Changes

--- a/backend/.env
+++ b/backend/.env
@@ -24,9 +24,9 @@ OTP_MAX_ATTEMPTS=5
 SSLCOMMERZ_STORE_ID=rosey6949426e584db
 SSLCOMMERZ_STORE_PASSWORD=rosey6949426e584db@ssl
 SSLCOMMERZ_SANDBOX=True
-SSLCOMMERZ_SUCCESS_URL=http://localhost:3000/payment/success
-SSLCOMMERZ_FAIL_URL=http://localhost:3000/payment/fail
-SSLCOMMERZ_CANCEL_URL=http://localhost:3000/payment/cancel
+SSLCOMMERZ_SUCCESS_URL=https://rmmdc.edu.bd/payment/success
+SSLCOMMERZ_FAIL_URL=https://rmmdc.edu.bd/payment/fail
+SSLCOMMERZ_CANCEL_URL=https://rmmdc.edu.bd/payment/cancel
 SSLCOMMERZ_IPN_URL=http://localhost:8000/api/payments/sslcommerz/ipn/
 SSLCOMMERZ_TRANSCRIPT_IPN_URL=http://localhost:8000/api/transcripts/sslcommerz/ipn/
 SSLCOMMERZ_ADMISSION_IPN_URL=http://localhost:8000/api/admissions/sslcommerz/ipn/
